--- a/.github/workflows/write_content.yml
+++ b/.github/workflows/write_content.yml
@@ -26,6 +26,6 @@ on:
   - name: Commit & Push
   uses: Andro999b/push@v1.3
   with:
-      github_token: ${{ secrets.GITHUB_TOKEN }}
+      github_token: ${{ secrets.GITHUB_TOKEN }} ## Autocreated by gthub action
       branch: main
       message: 'Updated by Github Actions'
