--- a/.github/workflows/read_content.yml
+++ b/.github/workflows/read_content.yml
@@ -1,29 +1,36 @@
 ## we get file name to read in the init
 
 name: read content
+
 on:
   workflow_call:
     inputs:
       input1:
         required: true
         type: string
+    outputs:
+      content:
+        description: 'Content of the file'
+        value: ${{ jobs.reusable_job.outputs.file_content }}
 
 jobs:
   reusable_job:
     runs-on: ubuntu-latest
+    outputs:
+      file_content: ${{ steps.read_file.outputs.content }}
     steps:
       ## Checkout the repository to access the files
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      ## Reads the Localizable.strings file
+      ## Reads the file specified by the input parameter
       - name: Read file contents
         id: read_file
         uses: guibranco/github-file-reader-action-v2@latest
         with:
-          path: ${{ inputs.input1 }}"
+          path: ${{ inputs.input1 }}
 
-      ## Prints the content of the file
+      ## Prints the content of the file (optional)
       - name: Print file contents
         run: |
           echo "${{ steps.read_file.outputs.content }}"
