--- a/.github/workflows/write_content.yml
+++ b/.github/workflows/write_content.yml
@@ -1,31 +1,51 @@
-## convert json to array of language_code, content
-## write each item in array to a file 
-## save content to files to root with name: "Localised-{{language_code}}".strings 
-## make a new commit and push
-
-name: write content
+## 1. Accept JSON input.
+## 2. Convert JSON to the desired format.
+## 3. Write each item's content to files named Localization-{{language_code}}.strings.
+## 4. Commit and push the changes.
+name: Write Content
 
 on:
-    workflow_call:
-      inputs:
-        input1:
-          required: true
-          type: string
+  workflow_call:
+    secrets: inherit
 
-- jobs
-  ## Pseudo code
-  - name: Write to file
-    uses: DamianReeves/write-file-action@master
-    with:
-      path: path/to/file.txt
-      contents: |
-        Hello World!
-      write-mode: overwrite
+jobs:
+  generate_localizations:
+    runs-on: ubuntu-latest
 
-  ## Pseudo code
-  - name: Commit & Push
-  uses: Andro999b/push@v1.3
-  with:
-      github_token: ${{ secrets.GITHUB_TOKEN }} ## Autocreated by gthub action
-      branch: main
-      message: 'Updated by Github Actions'
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Download translations artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: translations
+          path: ./artifacts
+
+      - name: Extract translations
+        if: ${{ runner.os != 'Windows' }}
+        run: |
+          tar -xzf ./artifacts/translations.tar.gz -C ./artifacts
+        shell: bash
+
+      - name: Extract translations (Windows)
+        if: ${{ runner.os == 'Windows' }}
+        run: |
+          tar -xzf .\artifacts\translations.tar.gz -C .\artifacts
+        shell: powershell
+
+      - name: Create localization files
+        run: |
+          node scripts/write_localizations.js ./artifacts/translations.json
+
+      - name: Configure Git
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+
+      - name: Commit and Push changes
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: 'Update localization files via GitHub Actions'
+          branch: main
+          file_pattern: 'Localization-*.strings'
