--- a/.github/actions/notify_slack.yml
+++ b/.github/actions/notify_slack.yml
@@ -37,7 +37,7 @@ jobs:
             Number of languages translated: ${{ inputs.num_of_languages }}
             Tokens used: ${{ inputs.tokens_count_used }} OpenAI tokens
             Testing completed: ${{ inputs.unit_test_success }}
-          webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook_url: "https://hooks.slack.com/services/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"
 
 ## send slack-channel a notification
 ## get num_of_languages count from init params
