Fix inherit bug
Invalid workflow file: .github/workflows/main.yml#L54
The workflow is not valid. In .github/workflows/main.yml (Line: 54, Col: 11): Error from called workflow eonist/Babel/.github/workflows/unit_test.yml@aea9fa243cbce30d056a790e03d988375c481376 (Line: 12, Col: 14): Unexpected value 'inherit'

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,9 @@ jobs:
   unit_test:
     name: Run Unit Tests
     needs: write_content
-    uses: ./.github/workflows/unit_test.yml
+    uses: eonist/Babel/.github/workflows/unit_test.yml@aea9fa2
+    secrets:
+      GITHUB_TOKEN: inherit
 
   notify_slack:
     name: Notify Slack
