--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -9,21 +9,17 @@ name: Swift Package CI
 
 on:
   workflow_call:
-    secrets: inherit
-    outputs:
-      test_success:
-        description: 'Indicates if unit tests passed or failed'
-        value: ${{ jobs.run_tests.outputs.test_success }}
+    secrets:
+      GITHUB_TOKEN:
+        required: true
 
 jobs:
-  run_tests:
+  test:
     runs-on: ubuntu-latest
-    outputs:
-      test_success: ${{ steps.run_tests.outputs.test_success }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Run Unit Tests
         id: run_tests
         run: |
