--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -9,9 +9,7 @@ name: Swift Package CI
 
 on:
   workflow_call:
-    secrets:
-      GITHUB_TOKEN:
-        required: true
+    # Remove GITHUB_TOKEN from secrets
 
 jobs:
   test:
