--- a/.github/workflows/send_openai.yml
+++ b/.github/workflows/send_openai.yml
@@ -31,6 +31,10 @@ on:
         description: 'Instruction for translation'
         required: true
         type: string
+      openai_api_key:
+        description: 'open ai api key'
+        required: false
+        type: string
     outputs:
       num_of_languages:
         description: 'Number of languages translated'
